Prevent wrapping on overflowing inline code blocks
+ Small change to code highlighting theme (preprocessing directives like parentheses?)

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -123,6 +123,7 @@ code {
   border-radius: 3px;
   background-color: rgb(0, 0, 0);
   padding: 0.15em 0.34em;
+  white-space: nowrap;
 }
 
 pre {
